fixed z-index

--- a/src/scss/_animated-bg.scss
+++ b/src/scss/_animated-bg.scss
@@ -1,9 +1,7 @@
 .area {
-  // background: #4e54c8;
-  // background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
   width: 100%;
   height: 100vh;
-  z-index: 1;
+  z-index: 0;
 }
 
 .circles {
@@ -13,6 +11,7 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
+  z-index: 0;
 }
 
 .circles li {
